fixed some potential null-values, cleaned up code, fixed word-wrap on extreme zoom in

--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,4 +1,5 @@
 .patients {
+  word-wrap: break-word;
   background-color: rgba(238, 246, 248, 0.902);
 }
 
